--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.22/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue-router@3.0.1/dist/vue-router.min.js"></script>
     <script src="https://unpkg.com/vuex@3.0.1/dist/vuex.min.js"></script>
-    <script id="area" src="http://fappserver.caomeng.me/res/distrcits.js"></script>
+    <script id="area" src="http://fimg.caomeng.me/res/distrcits.js"></script>
     <!-- dns-prefetch，在vue.config.js配置 -->
     <% for (var i in htmlWebpackPlugin.options.dnsPrefetch) { %>
       <link rel="dns-prefetch" href="<%= htmlWebpackPlugin.options.dnsPrefetch[i] %>">
