--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.5.22/dist/vue.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue-router@3.0.1/dist/vue-router.min.js"></script>
-    <script src="https://unpkg.com/vuex@3.0.1/dist/vuex.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.5.22/dist/vue.js"></script> -->
+    <script src="https://cdn.staticfile.org/vue/2.5.22/vue.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/vue-router@3.0.1/dist/vue-router.min.js"></script> -->
+    <script src="https://cdn.staticfile.org/vue-router/3.0.1/vue-router.min.js"></script>
+    <!-- <script src="https://unpkg.com/vuex@3.0.1/dist/vuex.min.js"></script> -->
+    <script src="https://cdn.staticfile.org/vuex/3.0.1/vuex.min.js"></script>
     <script id="area" src="http://fimg.caomeng.me/res/distrcits.js"></script>
     <!-- dns-prefetch，在vue.config.js配置 -->
     <% for (var i in htmlWebpackPlugin.options.dnsPrefetch) { %>
